syntax = "proto3";
package Proto.UserRpc;
message User {
    string id=1;
    string name=2;
    int32 age=3;
    string id_card=4;
    string pwd=5;
}
message UserRequest {
    repeated string Ids=1;
}
message UpdateUserRequest{
    User data=2;
}
message MutiUserRequest{
    repeated User Users=1;
}
message FailIdsResponse {
    repeated string Ids=1;
}
message UserResponse{
    repeated User Users=1;
}
service UserService {
    rpc GetUsers (UserRequest) returns (UserResponse);
    rpc DeleteUser (UserRequest) returns (FailIdsResponse);
    rpc UpdateUser (UpdateUserRequest) returns(FailIdsResponse);
    rpc Insert (MutiUserRequest) returns (UserResponse);
}
